src/main/webapp/view/css.css
#intro {
    height :100vh;
    background: url(images/maxresdefault.jpeg) no-repeat;
    background-size: cover;
}


#logo {
    background: url(images/logo.png);
}

nav.disabled{
    pointer-events: none;
}

#body {
    width: 100%;
    height: 100%;
}
#body.active {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
}
#body .slide {
    position: relative;
    z-index: -1;

}

#intro .content {
    position: relative;
    z-index: -2;
    background: none;

}

.content {
    all: initial;

}

nav {
    padding: 0;
}

#frosted-glass{
    box-shadow: 0 0 5px 0 ;
    background: inherit;
    backdrop-filter: blur(10px);
}

.frosted-glass-2{
    box-shadow: 0 0 6px 0 ;
    background: inherit;
    backdrop-filter: blur(12px);
    max-height: 200px;
}

#frosted-glass-3{
    box-shadow: 0 0 6px 0 ;
    background: inherit;
    backdrop-filter: blur(12px);
}

#content-box{
    height: 800px;
    min-height: 800px;
}

.vertical-scrollable>.tr {
    position: absolute;
    overflow-y: scroll;;

}

